fixed: overlapping orbit nav in setlist presentation

--- a/src/app.css
+++ b/src/app.css
@@ -416,7 +416,7 @@ section .footer {
     position: fixed;
     bottom: .5em;
     z-index: 1;
-    width: calc(100vw - 10em);
+    width: calc(100vw - 12em);
 }
 .orbit-container {
     height: calc(100vh - 6.3em) !important;
